# openepl-engine

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  OpenEPLCPackConfig.cmake  README.md  include  openepl-config.h.in  release.Dockerfile  version.cmake
Docker/: Dockerfile-build  Dockerfile-dev  README-dev.md  README.md  build.Dockerfile  dev-ssh.Dockerfile  dev.Dockerfile  release-dev.Dockerfile
Docker/development/: Dockerfile  README.md
resources/ccache/: launch-c.in  launch-cxx.in
resources/cmake/macros/: RegisterSourceGroup.cmake  imported.cmake
resources/doxygen/: CMakeLists.txt  Doxyfile.in
resources/examples/testfiles/depm/: mobile_robot.xml
resources/examples/testfiles/depm/abc/: abc.xml  abc_repeat.xml  abc_sub_model.xml  complex_abc.xml
resources/examples/testfiles/depm/battery/: battery.pm  battery.xml  battery_expected.pm  battery_real.pm  battery_recovery.xml  two_batteries.xml
resources/examples/testfiles/depm/transmitter/: from_errorpro6.pm  from_openepl.pm  from_storm.pm  transmitter.xml
resources/examples/testfiles/prism/: battery.pm  battery_low.pctl  ctmc.pm
resources/scripts/: auto-format.sh
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  handler.h  openepl.h  parser.cpp  parser.h  quantifier.cpp  quantifier.h  transformer.cpp  transformer.h
src/openepl/: CMakeLists.txt  openepl.cpp
src/parser/: CMakeLists.txt
src/parser/DEPM/: NodeDefinitions.h
src/parser/DEPM/XMLParser/: CFCParser.h  DataParser.h  EPCParser.h  ElementParser.h  FailureParser.h  ModelParser.h  Parser.h
src/parser/DEPM/XMLParser/ArcParser/: ControlFlowParser.h  DataFlowParser.h
src/storage/: CMakeLists.txt
src/storage/DEPM/: Model.h  ModelProps.h
src/storage/DEPM/Arc/: Arc.h  ControlFlow.h  DataFlow.h
src/storage/DEPM/Handlers/: MapHandler.h  ModelHandler.cpp  ModelHandler.h
src/storage/DEPM/Node/: CFC.h  Data.h  EPC.h  Element.h  Failure.h  Node.h
src/storage/DEPM/NodeProps/: CFCProps.h  DataProps.h  EPCProps.h  ElementProps.h  FailureProps.h  NodeProps.h  PropsType.h
src/test/: CMakeLists.txt  openepl_gtest.h
src/test/openepl/: CMakeLists.txt  openepl-test.cpp
src/test/openepl/api/: ParserAPITest.cpp  QuantifierAPITest.cpp
src/test/openepl/metrics/: ReliabilityTest.h
src/test/openepl/parser/DEPM/: PrismProgramTest.cpp
src/test/openepl/parser/DEPM/Model/: ModelParserTest.cpp  ParserTest.cpp  ParserTest.h
src/test/openepl/storage/DEPM/: ModelTest.cpp  ModelTest.h
src/test/openepl/storage/DEPM/Handlers/: FailureHandlerTest.cpp
src/test/openepl/storage/DEPM/Node/: FailureTest.cpp  NodeTest.cpp  NodeTest.h
src/test/openepl/storage/DEPM/Node/NodeProps/: NodePropsTest.cpp
src/test/openepl/transformer/DEPM/: ModelTransformerTest.cpp
src/transformer/: CMakeLists.txt
src/transformer/DEPM/: ModelDefinitions.h  ModelTransformer.cpp  ModelTransformer.h
src/utility/: CMakeLists.txt  ContainerTypes.h  Helpers.h  ParserTypes.h  UnorderedMap.h  json.hpp
